--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core">
 
     <body>
 
@@ -17,31 +18,21 @@
 
             <ui:define name="body" >
                 <h:form id="formLogin">                    
-                    <p:messages id="messages" showDetail="true"/>
-
-                    <p:panel header="Iniciar Sesión" style=" width: 250px; text-align: center; margin: 140px 140px 140px 340px; m">
-                        <h:panelGrid columns="1" cellpadding="5" cellspacing="0">
-                            <p:row>
-                                <p:graphicImage value="resources/img/ico-usuario.png" />                            
-                                <p:inputText id="nombreUsuario" value="#{serviciosSimcaController.nombreUsuario}" label="Nombre de usuario" required="true" />
-                                <p:watermark for="nombreUsuario" value="Nombre de usuario" />
-                            </p:row>
-
-                            <p:row>
-                                <p:graphicImage value="resources/img/ico-pass.png" />                                                        
-                                <p:password id="contrasenia" value="#{serviciosSimcaController.contrasenia}" label="Contraseña" required="true" />
-                                <p:watermark for="contrasenia" value="Contraseña" />                           
-                            </p:row>
-
-                            <p:row>                                
-                                <p:commandButton style=" border: 25px; " value="Ingresar" action="#{serviciosSimcaController.login}" update="formLogin messages" />                                                                                                
-                            </p:row>
+                    <p:panel header="Iniciar Sesión" style=" width: 260px; text-align: center; margin: 140px 140px 140px 340px;" >
+                        <p:messages id="messages" showDetail="false"/>
+                        <h:panelGrid columns="2" cellpadding="8" cellspacing="0">
+                            <p:graphicImage value="resources/img/ico-usuario.png" />                            
+                            <p:inputText id="nombreUsuario" value="#{serviciosSimcaController.nombreUsuario}" label="Nombre de usuario" required="true" placeholder="Nombre de usuario" requiredMessage="Usuario requerido." />
+                            
+                            <p:graphicImage value="resources/img/ico-pass.png" />                                                        
+                            <p:password id="contrasenia" value="#{serviciosSimcaController.contrasenia}" label="Contraseña" required="true" placeholder="Contraseña" requiredMessage="Contraseña requerida."/>
+                            <f:facet name="footer">
+                                <p:commandButton value="Ingresar" action="#{serviciosSimcaController.login}" update="formLogin messages" icon="ui-icon-carat-1-e" />
+                            </f:facet>
                         </h:panelGrid>
                     </p:panel>
                 </h:form>
             </ui:define>
-
         </ui:composition>
-
     </body>
 </html>
