--- a/web/director/editar-anteproyecto.xhtml
+++ b/web/director/editar-anteproyecto.xhtml
@@ -50,103 +50,53 @@
                         </p:submenu>                                
                     </p:menu>
                 </h:form>
-
                 <p:panel styleClass="paneltrabajo" >
-
-
                     <div class="tituloContenido">                        
                         <h:outputText value="Editar Anteproyecto"/> <br/>
                     </div>                 
-
+                    <p:spacer height="30"/>
                     <h:form enctype="multipart/form-data">   
 
-                        <p:panel style="width: 100%;" header="Campos con * son Obligatorios">
-                            <p:growl id="growl" sticky="true" showDetail="true" for="msg"/>
+                        <p:panel style="width: 100%; font-size: 14px;" header="Campos con * son obligatorios">
+                            <p:growl id="growl" sticky="true" showDetail="true"/>
                             <p:messages/>
-
-                            <p:panelGrid styleClass="panelinterno">
-                                <p:row>
-                                    <p:column styleClass="titulotabla">
-                                        <p:outputLabel  value="Nombre del trabajo de grado:"> </p:outputLabel>
-                                    </p:column>
-                                    <p:column>
-                                        <p:outputLabel value="#{anteproyecto.nombretg}"> </p:outputLabel>
-                                    </p:column>
-                                </p:row>
-
-                                <p:row>
-                                    <p:column styleClass="titulotabla">
-                                        <p:outputLabel  value="Director del trabajo de grado:"> </p:outputLabel>
-                                    </p:column>
-                                    <p:column>
-                                        <p:outputLabel value="#{anteproyecto.directortg}"> </p:outputLabel>
-                                    </p:column>
-                                </p:row>
-
-                                <p:row>
-                                    <p:column styleClass="titulotabla">
-                                        <p:outputLabel  value="Nombre de los estudiantes:"> </p:outputLabel>
-                                    </p:column>
-                                    <p:column>
-                                        <p:outputLabel value="- #{anteproyecto.est1}"> </p:outputLabel> <br />
-                                        <p:outputLabel value="- #{anteproyecto.est2}"> </p:outputLabel> 
-                                    </p:column>
-                                </p:row>
-
-                                <p:row> 
-                                    <p:column colspan="2" styleClass="titulotabla">
-                                        <p:outputLabel value="Objetivos:" for="obj"> </p:outputLabel>
-                                    </p:column>
-                                </p:row>
-
-                                <p:row>
-                                    <p:column colspan="2">
-                                        <p:inputTextarea id="obj" value="#{anteproyecto.objetivos}" required="true" styleClass="txtareaform" />
-                                    </p:column>
-                                </p:row>
-
-                                <p:row>
-                                    <p:column colspan="2" styleClass="titulotabla">
-                                        <p:outputLabel value="Adjuntar anteproyecto:" for="ant"> </p:outputLabel>
-                                    </p:column>
-                                </p:row>
-                                <p:row>
-                                    <p:column>
-                                        <p:fileUpload id="ant" required="true" fileUploadListener="#{anteproyecto.handleFileUpload}" auto="true"
-                                                      allowTypes="/(\.|\/)(doc|docx|xls|xlsx|pdf)$/" sizeLimit="31457280" label="Adjuntar Archivo" update="nombarch"
-                                                      invalidFileMessage="Tipo de Archivo no Valido, Agregue un archivo word o pdf" 
-                                                      invalidSizeMessage="El archivo excede le tamaño permitido(30MG)" 
-                                                      />
-                                    </p:column>
-                                    <p:column>
-                                        <p:outputLabel id="nombarch" value="#{anteproyecto.nombarch}"> </p:outputLabel> <br />
-                                        <p:commandButton id="btndesc" style="margin-top: 20px;" value="Descargar Archivo" rendered="#{anteproyecto.filedown != null}"
-                                                         ajax="false" onclick="PrimeFaces.monitorDownload(mostrarestado, ocultarestado);" 
-                                                         icon="ui-icon-arrowthick-1-s" action="#{anteproyecto.preparardescarga()}">
-                                            <p:fileDownload value="#{anteproyecto.filedown}" />
-                                        </p:commandButton>
-                                    </p:column>
-                                </p:row>
-                                <p:row>
-                                    <p:column >
-                                        <p:button value="Cancelar"  icon="ui-icon-cancel" style="margin-top: 20px;"/>
-                                    </p:column>
-                                    <p:column>
-                                        <p:commandButton value="Editar" ajax="false" actionListener="#{anteproyecto.editar}" style="margin-top: 20px;"/>
-                                    </p:column>
-                                </p:row>
-
-                            </p:panelGrid>
-
-
+                            
+                            <h:panelGrid style="margin: 0 auto;" columns="2" cellpadding="15" >
+                                <p:outputLabel styleClass="subtitulosFormato" value="Nombre del trabajo de grado: *" />
+                                <p:outputLabel style="font-weight: bold" value="#{anteproyecto.nombretg}" />
+                                <p:outputLabel styleClass="subtitulosFormato" value="Nombre de los estudiantes: *" />
+                                <p:column>
+                                    <p:outputLabel value="#{anteproyecto.est1}" /> <br />
+                                    <p:outputLabel value="#{anteproyecto.est2}" />
+                                </p:column>
+                                <p:outputLabel styleClass="subtitulosFormato" value="Director del trabajo de grado: *" />
+                                <p:outputLabel value="#{anteproyecto.directortg}" />
+                                <p:outputLabel styleClass="subtitulosFormato" value="Objetivos: *" />
+                                <p:inputTextarea cols="50" rows="3" value="#{anteproyecto.objetivos}" required="true" validatorMessage="Debe ingresar los objetivos." style="display: block; margin: 0 auto;" />
+                                <p:outputLabel styleClass="subtitulosFormato" value="Adjuntar anteproyecto: *" />
+                                <p:column>    
+                                    <p:fileUpload required="true" fileUploadListener="#{anteproyecto.handleFileUpload}" auto="true"
+                                                allowTypes="/(\.|\/)(doc|docx|xls|xlsx|pdf)$/" sizeLimit="31457280" label="Examinar" update="nombarch"
+                                                invalidFileMessage="Tipo de Archivo no Valido, Agregue un archivo word o pdf" 
+                                                invalidSizeMessage="El archivo excede le tamaño permitido(30MG)" 
+                                                  />
+                                    <p:outputLabel id="nombarch" value="#{anteproyecto.nombarch}"> </p:outputLabel> <br />
+                                </p:column>
+                            </h:panelGrid>
+                            <p:spacer height="10"/>
+                            <h:panelGrid style="margin: 0 auto;" columns="3" cellpadding="13">
+                                <p:commandButton value="Editar" update="growl" actionListener="#{anteproyecto.editar()}" icon="ui-icon-pencil" style="font-size: 13px; width: 120px;"/>
+                                <p:commandButton id="btndesc" style="font-size: 13px; width: 160px;" value="Descargar archivo" rendered="#{anteproyecto.filedown != null}"
+                                                ajax="false" onclick="PrimeFaces.monitorDownload(mostrarestado, ocultarestado);" 
+                                                icon="ui-icon-arrowthick-1-s" action="#{anteproyecto.preparardescarga()}">
+                                    <p:fileDownload value="#{anteproyecto.filedown}" />
+                                </p:commandButton>
+                                <p:button value="Cancelar" icon="ui-icon-cancel" outcome="2-realizacion-anteproyecto" style="font-size: 13px; width: 120px;"/>
+                            </h:panelGrid>
                         </p:panel>
                     </h:form>
-
-                </p:panel>       
-
+                </p:panel> 
             </ui:define>
-
         </ui:composition>
-
     </body>
 </html>
