--- a/web/jefe-de-departamento/editar-formato-revision-idea.xhtml
+++ b/web/jefe-de-departamento/editar-formato-revision-idea.xhtml
@@ -9,11 +9,7 @@
     <body>
 
         <ui:composition template="./../plantillas/plantilla.xhtml">
-
-            <ui:define name="CuadroDeBotonesSesion">
-                CuadroDeBotonesSesion
-            </ui:define>
-
+            
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
@@ -47,7 +43,7 @@
                     <p:spacer height="30"/>                 
 
                     <h:form enctype="multipart/form-data">
-                        <p:panel header="Campos con * son obligatorios" style="width: 100%;" >
+                        <p:panel header="Campos con * son obligatorios" style="width: 100%; font-size: 14px;" >
                             <p:growl id="growl" sticky="true" showDetail="true" />
                             <p:messages/>
 
@@ -81,7 +77,7 @@
                             </h:panelGrid>
                             
                             <h:panelGrid columns="2" style="margin: 0 auto;" cellpadding="8">
-                                <p:commandButton ajax="false" update="growl" value="Editar" actionListener="#{revisionIdeaController.editar()}" icon="ui-icon-pencil"/>
+                                <p:commandButton ajax="false" update="growl" value="Editar" action="#{revisionIdeaController.editar()}" icon="ui-icon-pencil"/>
                                 <p:button value="Cancelar"  icon="ui-icon-cancel" outcome="fases-trabajo-de-grado"/>
                             </h:panelGrid>
                         </p:panel>
